# altwallet-checkout-agent

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_EXTENSION_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  COMMIT_MSG.txt  CONTRIBUTING.md  Dockerfile  FINAL_TEST_SUMMARY.md  MIGRATION.md  Makefile  ORCA_ALIGNMENT_INVENTORY.md  ORCA_ALIGNMENT_SUMMARY.md  PHASE2_DOD.md  README.md  RELEASE_BODY_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v1.1.0-orca.0.md  RELEASE_SUMMARY_v0.3.0.md  RELEASE_v0.2.0.md  STRUCTURED_LOGGING_SUMMARY.md  VERSION  altwallet_agent.py  coverage.xml  docker-compose.yml  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.ps1  setup.bat  setup.ps1  tasks.ps1  tatus  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  phase1_checklist.md
.github/workflows/: ci.yml  orca-quality-gates.yml  phase4-guardrails.yml  release-orca.yml  test.yml
altwallet_merchant_agent/: __init__.py  cli.py  core.py
analytics/: README.md  schema.json
analytics/dashboards/: approval_rate_dashboard.json  approval_rate_metabase.json  decision_latency_dashboard.json  decline_reasons_dashboard.json  loyalty_events_dashboard.json  surcharge_suppression_dashboard.json
analytics/sql/: approval_rate.sql  decision_latency.sql  decline_reasons.sql  loyalty_events.sql  surcharge_suppression.sql
config/: approval.yaml  env.example  merchant_penalties.yaml  preferences.yaml
data/: context.json
deploy/: README.md
deploy/helm/: README.md
deploy/helm/altwallet-checkout-agent/: Chart.yaml  values.yaml
deploy/terraform/: README.md  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
deployment/: __init__.py  config.py  manager.py
deployment/helm/: Chart.yaml
deployment/inline/: embedded.py  embedded.yaml
deployment/sidecar/: docker-compose.yml  kubernetes.yaml
docs/: ADDITIVE_ATTRIBUTIONS.md  ANALYTICS.md  APPROVAL_SCORER.md  CERTIFICATION_CHECKLIST.md  CLI_USAGE.md  COMPOSITE_UTILITY.md  DECISIONING.md  DECISION_CONTRACT.md  DOCKER.md  ENHANCED_RECOMMENDATIONS.md  ENVIRONMENT_VARIABLES.md  LOGGING.md  MERCHANT_PENALTY.md  PHASE4_GUARDRAILS.md  PHASE4_PROVIDER_FRAMEWORK.md  PREFERENCE_WEIGHTING.md  SCORING.md  WEBHOOKS.md  WEBHOOK_EMITTER.md  architecture-orca.md  phase1_acceptance.md  phase2_intelligence.md  phase2_summary.md
examples/: additive_attributions_demo.py  analytics_demo.py  approval_demo.py  cli_comprehensive_demo.py  cli_demo.py  cli_demo_new.py  cli_simple_test.py  composite_utility_demo.py  context_basic.json  decisioning_demo.py  enhanced_recommendations_demo.py  logging_demo.py  merchant_penalty_demo.py  normal_decision.json  orca_high_risk_response.json  orca_online_grocery.json  orca_online_grocery_response.json  preference_demo.py  risky_decision.json  scoring_demo.py  webhook_demo.py
examples/deploy/: README.md  inline_config.json  inline_integration_example.py  sidecar_config.json  sidecar_docker_compose.yml
merchant_agent/: cli.py  core.py
openapi/: AltWallet_Checkout_Agent_v0.2.0.postman_collection.json  README.md  openapi.json  openapi.yaml
scripts/: build-docker.ps1  build-docker.sh  docker-cli.ps1  docker-cli.sh  start_api.py  verify_phase1.bat  verify_phase1.py
sdk/: README.md
sdk/nodejs/: README.md  package.json  tsconfig.json
sdk/nodejs/examples/: advanced_usage.js  (+1 more)
sdk/python/: README.md  requirements.txt  setup.py
src/: agent.js  index.js
src/altwallet_agent/: __init__.py  __main__.py  analytics.py  api.py  approval_scorer.py  cli.py  composite_utility.py  config.py  core.py  decisioning.py  logger.py  merchant_penalty.py  models.py  policy.py  preference_weighting.py  scoring.py  webhooks.py
src/utils/: logger.js
tests/: agent.test.js  load_test.py  setup.js  smoke_tests.py  test_additive_attributions.py  test_analytics.py  test_api_comprehensive.py  test_approval_scorer.py  test_card_database_comprehensive.py  test_cli_comprehensive.py  test_cli_scoring.py  test_composite_utility.py  test_config.py  test_core_comprehensive.py  test_decisioning.py  test_demo.py  test_deployment_profiles.py  test_enhanced_recommendations.py  test_fast_unit.py  test_golden.py  test_intelligence_engine.py  test_merchant_analyzer_comprehensive.py  test_merchant_penalty.py  test_merchant_penalty_comprehensive.py  test_orca_scenarios.py  test_phase4_certification.py  test_phase4_deployment.py  test_phase4_logging_compliance.py  test_phase4_sdk.py  test_preference_weighting.py  test_preference_weighting_comprehensive.py  test_scoring.py  test_scoring_integration.py  test_webhooks.py  test_webhooks_comprehensive.py
tests/data/: sample_transaction.json
tests/golden/: README.md  __init__.py  test_checkout_responses.py  test_golden_scoring.py  test_intelligence_outputs.py  test_orca_golden_scenarios.py
(+73 files in other folders)
