[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altwallet-merchant-agent"
version = "0.1.0"
description = "AltWallet Agent for Merchant - A CLI tool for card recommendations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "AltWallet Team", email = "support@altwallet.com"},
]
keywords = ["credit-cards", "cashback", "recommendations", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
altwallet-merchant-agent = "altwallet_merchant_agent.cli:app"

[project.urls]
Homepage = "https://github.com/altwallet/merchant-agent"
Repository = "https://github.com/altwallet/merchant-agent"
Issues = "https://github.com/altwallet/merchant-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["altwallet_merchant_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
